[package]
name = "clawbackable-vesting"
version = "1.0.0"
authors = ["Adam J. Weigold <adam@irulast.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { version = "0.16.0" }
cw20 = { version = "0.16.0" }
cosmwasm-std = { version = "1.1.6" }
cw-storage-plus = "0.16.0"
thiserror = { version = "1.0.37" }
cosmwasm-schema = { version = "1.1.6", default-features = false  }
itertools = "0.10.5"
